**  denotes quite substantial/important changes
*** denotes really big changes 

1.3-30

* `gam.fit3' now traps derivative iteration divergence, and suggests 
  tightening the convergence tolerance `epsilon' in `gam.control'. 
  Divergence can happen for ill-conditioned models if the PIRLS has 
  not converged sufficiently.

* `magic' and helpfile modified slightly to pick up number of smoothing 
   parameters to estimate solely from `S' list - still user responsibility 
   to ensure `sp' and `S' dimensions correspond.        

* gamm.Rd updated to reflect change to gammPQL in 1.3-28.

1.3-29

* `magic' could segfault if supplied with many constraints and relatively 
   high rank penalties, so that after constriant the penalty  matrix 
   square roots had more columns than rows (never happened in additive 
   model case, but can happen in more general settings). Fixed.

* `gamm' now silently drops grouping factors within the correlation 
   structure formulae that duplicate random effects grouping factors 
   (which automatically act as grouping factors on the correlation 
   structures anyway).

* Some replacement of dubious `as.matrix' calls with use of `,drop=FALSE]' 
  in gamm.r   

1.3-28

** `gamm' modified to call a routine `gammPQL' in place of MASS::glmmPQL. 
  This avoids some duplication, and facilitates maintainance. 

* Bug fix in `formXtViX' where matrix dimensions got dropped when 
  subsetting thereby messing up variance calculations for gamm fits in 
  which some group sizes were 1. 

1.3-27

** Fix of nasty bug in large dataset handling with "tp" basis (introduced 
   in 1.3-26). Subsampling code was re-seeding RNG instead of intended 
   behaviour of saving RNG state and  restoring it. Fixed and tested.

1.3-26

* modification to `gam' so that GCV/UBRE scores reported with all fixed 
  smoothing parameters are consistent with equivalent under s.p. 
  estimation.

* gam.fit3 modified to test for convergence of coefficients as well